# monitorx

./: .gitignore  CMakeLists.txt  README.md  main.cpp
cmake/: FindEntityx.cmake  FindOpenGL.cmake
src/: MonitorX.cpp  MonitorX.h
test/: Rect.h  Test.h  Vec2.h
test/components/: ComponentReflections.cpp  Position.h  RenderContext.h  Size.h  Visibility.h
